@@ -211,6 +211,8 @@ set ppc64elftests {
 	{{objdump -s tocopt3.d}} "tocopt3"}
     {"TOC opt4" "-melf64ppc -no-keep-memory --defsym x=2" "-a64"
         {tocopt4a.s tocopt4b.s} {{objdump -s tocopt4.d}} "tocopt4"}
+    {"TOC opt5" "-melf64ppc" "-a64"  {tocopt5.s}
+	{{objdump -s tocopt5.d}} "tocopt5"}
 }
 
 
