@@ -1,3 +1,13 @@
+2011-09-30  Alan Modra  <amodra@gmail.com>
+
+	PR ld/13235
+	* elf64-ppc.c (struct ppc64_elf_obj_tdata): Add ha_relocs_not_using_r2.
+	(ppc64_elf_edit_toc): Check HA relocs.
+	(ha_reloc_match): Delete function.
+	(ppc64_elf_relocate_section): Remove delayed HA nop optimization.
+	Instead do it and low part optimization based on
+	ha_relocs_not_using_r2.
+
 2011-09-29  Alan Modra  <amodra@gmail.com>
 
 	PR ld/13233
